correction overflow #2
correction overflow css/scss

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -2,8 +2,9 @@
   // outline: 1px solid red;
 }
 
-html {
-  overflow: hidden;
+html{
+  overflow-x: hidden;
+  overflow-y: scroll; 
 }
 
 a{
